[package]
name = "payments-engine"
version = "0.1.0"
authors = ["Carlos Fernandez Sanz <carlos@sanz.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rust_decimal = "1.13"
rust_decimal_macros = "1.13"
log = ""
env_logger = ""
